--- a/test_bench.ipynb
+++ b/test_bench.ipynb
@@ -132,96 +132,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>44</th>\n",
-       "      <th>45</th>\n",
-       "      <th>46</th>\n",
-       "      <th>47</th>\n",
-       "      <th>48</th>\n",
-       "      <th>49</th>\n",
-       "      <th>50</th>\n",
-       "      <th>51</th>\n",
-       "      <th>52</th>\n",
-       "      <th>53</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1610612743</td>\n",
-       "      <td>Denver Nuggets</td>\n",
-       "      <td>82</td>\n",
-       "      <td>53</td>\n",
-       "      <td>29</td>\n",
-       "      <td>0.646</td>\n",
-       "      <td>48.2</td>\n",
-       "      <td>43.6</td>\n",
-       "      <td>86.4</td>\n",
-       "      <td>0.504</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 54 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           0               1   2   3   4      5     6     7     8      9   \\\n",
-       "0  1610612743  Denver Nuggets  82  53  29  0.646  48.2  43.6  86.4  0.504   \n",
-       "\n",
-       "   ...  44  45  46  47  48  49  50  51  52  53  \n",
-       "0  ...   1   1   1   1   1   1   1   1   1   1  \n",
-       "\n",
-       "[1 rows x 54 columns]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1610612748\n",
+      "1610612761\n"
+     ]
     }
    ],
    "source": [
@@ -253,8 +173,8 @@
     "            'SeasonType': \"Regular Season\",\n",
     "            'Sorter': \"DATE\",\n",
     "            }\n",
-    "\n",
-    "url_base = 'https://stats.nba.com/stats/leaguedashteamstats?Conference=&DateFrom=&DateTo=&Division=&GameScope=&GameSegment=&Height=&LastNGames=0&LeagueID=00&Location=&MeasureType=Base&Month=0&OpponentTeamID=0&Outcome=&PORound=0&PaceAdjust=N&PerMode=PerGame&Period=0&PlayerExperience=&PlayerPosition=&PlusMinus=N&Rank=N&Season=2022-23&SeasonSegment=&SeasonType=Regular%20Season&ShotClockRange=&StarterBench=&TeamID=1610612743&TwoWay=0&VsConference=&VsDivision='\n",
+    "\"\"\"\n",
+    "url_base = 'https://stats.nba.com/stats/leaguedashteamstats?Conference=&DateFrom=&DateTo=07%2F19%2F2023&Division=&GameScope=&GameSegment=&Height=&LastNGames=0&LeagueID=00&Location=&MeasureType=Base&Month=0&OpponentTeamID=0&Outcome=&PORound=0&PaceAdjust=N&PerMode=PerGame&Period=0&PlayerExperience=&PlayerPosition=&PlusMinus=N&Rank=N&Season=2022-23&SeasonSegment=&SeasonType=Regular%20Season&ShotClockRange=&StarterBench=&TeamID=0&TwoWay=0&VsConference=&VsDivision='\n",
     "\n",
     "response = requests.get(url_base, params=parameters, headers=headers)\n",
     "\n",
@@ -263,8 +183,169 @@
     "response = response.json()\n",
     "games_info = response['resultSets'][0]['rowSet']\n",
     "df = pd.DataFrame(games_info)\n",
-    "df\n"
+    "df\n",
+    "\"\"\"\n",
+    "team_list = [1610612748, 1610612761]\n",
+    "\n",
+    "dfs=[]\n",
+    "for team_id in team_list:\n",
+    "#for season_id in season_list:\n",
+    "    games_info_url = f'https://stats.nba.com/stats/leaguedashteamstats?Conference=&DateFrom=&DateTo=07%2F19%2F2023&Division=&GameScope=&GameSegment=&Height=&LastNGames=0&LeagueID=00&Location=&MeasureType=Base&Month=0&OpponentTeamID={team_id}&Outcome=&PORound=0&PaceAdjust=N&PerMode=PerGame&Period=0&PlayerExperience=&PlayerPosition=&PlusMinus=N&Rank=N&Season=2022-23&SeasonSegment=&SeasonType=Regular%20Season&ShotClockRange=&StarterBench=&TeamID=0&TwoWay=0&VsConference=&VsDivision='\n",
+    "    #json response\n",
+    "    response = requests.get(url=games_info_url, headers=headers).json()\n",
+    "    #pulling just desired data\n",
+    "    games_info = response['resultSets'][0]['rowSet']\n",
+    "    df = pd.DataFrame(games_info)\n",
+    "    print(team_id)\n",
+    "    dfs.append(df) \n",
+    "\n",
+    "final_df = pd.concat(dfs)\n",
+    "\n",
+    "final_df.to_excel('test.xlsx')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[            0                       1   2   3   4      5     6     7     8   \\\n",
+       " 0   1610612737           Atlanta Hawks   4   1   3  0.250  48.0  42.0  83.8   \n",
+       " 1   1610612738          Boston Celtics   4   2   2  0.500  49.3  39.8  80.8   \n",
+       " 2   1610612751           Brooklyn Nets   3   3   0  1.000  48.0  41.3  80.7   \n",
+       " 3   1610612766       Charlotte Hornets   4   2   2  0.500  49.3  43.0  87.3   \n",
+       " 4   1610612741           Chicago Bulls   3   3   0  1.000  48.0  42.0  82.0   \n",
+       " 5   1610612739     Cleveland Cavaliers   4   2   2  0.500  48.0  40.8  83.0   \n",
+       " 6   1610612742        Dallas Mavericks   2   1   1  0.500  48.0  42.0  78.5   \n",
+       " 7   1610612743          Denver Nuggets   2   2   0  1.000  48.0  44.5  76.0   \n",
+       " 8   1610612765         Detroit Pistons   3   1   2  0.333  48.0  39.0  80.7   \n",
+       " 9   1610612744   Golden State Warriors   2   1   1  0.500  48.0  42.5  88.0   \n",
+       " 10  1610612745         Houston Rockets   2   0   2  0.000  48.0  39.5  89.0   \n",
+       " 11  1610612754          Indiana Pacers   4   2   2  0.500  48.0  35.8  80.0   \n",
+       " 12  1610612746             LA Clippers   2   0   2  0.000  48.0  33.0  73.5   \n",
+       " 13  1610612747      Los Angeles Lakers   2   1   1  0.500  48.0  38.5  79.0   \n",
+       " 14  1610612763       Memphis Grizzlies   2   1   1  0.500  48.0  44.0  90.5   \n",
+       " 15  1610612749         Milwaukee Bucks   4   2   2  0.500  48.0  40.5  89.3   \n",
+       " 16  1610612750  Minnesota Timberwolves   2   1   1  0.500  48.0  40.0  82.0   \n",
+       " 17  1610612740    New Orleans Pelicans   2   0   2  0.000  48.0  37.0  79.0   \n",
+       " 18  1610612752         New York Knicks   4   3   1  0.750  48.0  41.8  80.5   \n",
+       " 19  1610612760   Oklahoma City Thunder   2   0   2  0.000  48.0  42.5  86.5   \n",
+       " 20  1610612753           Orlando Magic   4   1   3  0.250  50.5  39.0  86.3   \n",
+       " 21  1610612755      Philadelphia 76ers   3   1   2  0.333  48.0  37.3  77.3   \n",
+       " 22  1610612756            Phoenix Suns   2   0   2  0.000  48.0  41.0  90.5   \n",
+       " 23  1610612757  Portland Trail Blazers   2   1   1  0.500  48.0  36.0  75.0   \n",
+       " 24  1610612758        Sacramento Kings   2   1   1  0.500  48.0  41.5  81.0   \n",
+       " 25  1610612759       San Antonio Spurs   2   1   1  0.500  48.0  37.5  77.5   \n",
+       " 26  1610612761         Toronto Raptors   4   3   1  0.750  48.0  40.0  88.0   \n",
+       " 27  1610612762               Utah Jazz   2   0   2  0.000  48.0  39.0  85.5   \n",
+       " 28  1610612764      Washington Wizards   4   2   2  0.500  49.3  40.5  90.5   \n",
+       " \n",
+       "        9   ...  44  45  46  47  48  49  50  51  52  53  \n",
+       " 0   0.501  ...  28  16   6   6  25  21   8  13   7  18  \n",
+       " 1   0.492  ...  10  20  24  24   5  13  15   7   7   8  \n",
+       " 2   0.512  ...  17  13   4  22   2  20  25  17   5   1  \n",
+       " 3   0.493  ...   4  24  20  18  23   8  27   4   6  21  \n",
+       " 4   0.512  ...  21   7  11   4  13   2  12  22   7   2  \n",
+       " 5   0.491  ...  22   4  10   5   9  17  23  17  19   5  \n",
+       " 6   0.535  ...  29   9   3  26  29   1  26  12   2   3  \n",
+       " 7   0.586  ...  25   1  16  28  23  21   7  24   3   6  \n",
+       " 8   0.483  ...  24  19   5  22  28  12  17  16  20  16  \n",
+       " 9   0.483  ...   4   2  27  18  14  21   6  25   4   9  \n",
+       " 10  0.444  ...   1  26  16   2   9  29  12   6  27  18  \n",
+       " 11  0.447  ...  18  22  15  24   1   9  22  13  28  14  \n",
+       " 12  0.449  ...  22  29  13  26  27   3   3   4  23  27  \n",
+       " 13  0.487  ...  12  26  28  18   9  21   3  20  23  25  \n",
+       " 14  0.486  ...  19  13   7   6  19  21   3  28  14  25  \n",
+       " 15  0.454  ...   7  20   2  12  25  13   1  25  12   7  \n",
+       " 16  0.488  ...  13   2  26  16   7  21   9  13  18  12  \n",
+       " 17  0.468  ...  20  15  28   1  14   3   9  25  29  29  \n",
+       " 18  0.519  ...  15  18  14  10  19   3  11  21  11  10  \n",
+       " 19  0.491  ...  10   9  16  11  14   9  23   9  15  15  \n",
+       " 20  0.452  ...   6   9  23   3   5  17  20  11  13  18  \n",
+       " 21  0.483  ...  27  25  11  15   9   6  18  22  21  17  \n",
+       " 22  0.453  ...   8  28   7  13  19  17  20  29  25  24  \n",
+       " 23  0.480  ...  25  22  25   6  19   7   2   9  25  28  \n",
+       " 24  0.512  ...  16   5  16  29   7  21  28   2  10  10  \n",
+       " 25  0.484  ...  13   9  22   6  14  15  12   1  17  21  \n",
+       " 26  0.455  ...   8  16   1  13   3  15  19  19  22   4  \n",
+       " 27  0.456  ...   2   7  21  16  14   9  29   2   1  23  \n",
+       " 28  0.448  ...   3   6   9  18   3  28  15   7  16  13  \n",
+       " \n",
+       " [29 rows x 54 columns],\n",
+       "             0                       1   2   3   4      5     6     7     8   \\\n",
+       " 0   1610612737           Atlanta Hawks   3   2   1  0.667  49.7  42.7  86.7   \n",
+       " 1   1610612738          Boston Celtics   4   4   0  1.000  48.0  41.3  86.3   \n",
+       " 2   1610612751           Brooklyn Nets   4   4   0  1.000  48.0  43.3  80.0   \n",
+       " 3   1610612766       Charlotte Hornets   4   0   4  0.000  48.0  41.5  81.3   \n",
+       " 4   1610612741           Chicago Bulls   3   1   2  0.333  48.0  39.7  79.7   \n",
+       " 5   1610612739     Cleveland Cavaliers   4   1   3  0.250  48.0  38.8  81.8   \n",
+       " 6   1610612742        Dallas Mavericks   2   1   1  0.500  48.0  37.0  75.0   \n",
+       " 7   1610612743          Denver Nuggets   2   1   1  0.500  48.0  42.5  81.0   \n",
+       " 8   1610612765         Detroit Pistons   4   0   4  0.000  48.0  36.8  80.8   \n",
+       " 9   1610612744   Golden State Warriors   2   2   0  1.000  48.0  46.5  85.5   \n",
+       " 10  1610612745         Houston Rockets   2   0   2  0.000  48.0  38.5  82.0   \n",
+       " 11  1610612754          Indiana Pacers   3   3   0  1.000  48.0  43.0  84.0   \n",
+       " 12  1610612746             LA Clippers   2   2   0  1.000  48.0  42.0  82.0   \n",
+       " 13  1610612747      Los Angeles Lakers   2   1   1  0.500  48.0  41.0  83.5   \n",
+       " 14  1610612763       Memphis Grizzlies   2   1   1  0.500  48.0  43.0  86.5   \n",
+       " 15  1610612748              Miami Heat   4   1   3  0.250  48.0  33.8  76.3   \n",
+       " 16  1610612749         Milwaukee Bucks   4   3   1  0.750  49.3  40.5  84.5   \n",
+       " 17  1610612750  Minnesota Timberwolves   2   1   1  0.500  48.0  42.0  87.0   \n",
+       " 18  1610612740    New Orleans Pelicans   2   1   1  0.500  48.0  42.0  85.0   \n",
+       " 19  1610612752         New York Knicks   4   1   3  0.250  49.3  40.8  85.0   \n",
+       " 20  1610612760   Oklahoma City Thunder   2   1   1  0.500  48.0  46.0  93.5   \n",
+       " 21  1610612753           Orlando Magic   4   2   2  0.500  48.0  39.8  77.5   \n",
+       " 22  1610612755      Philadelphia 76ers   4   3   1  0.750  49.3  39.0  78.5   \n",
+       " 23  1610612756            Phoenix Suns   2   1   1  0.500  48.0  39.0  79.0   \n",
+       " 24  1610612757  Portland Trail Blazers   2   0   2  0.000  48.0  37.0  76.0   \n",
+       " 25  1610612758        Sacramento Kings   2   1   1  0.500  48.0  40.0  83.0   \n",
+       " 26  1610612759       San Antonio Spurs   2   0   2  0.000  48.0  36.0  90.5   \n",
+       " 27  1610612762               Utah Jazz   2   2   0  1.000  48.0  45.5  85.0   \n",
+       " 28  1610612764      Washington Wizards   3   1   2  0.333  49.7  39.7  81.7   \n",
+       " \n",
+       "        9   ...  44  45  46  47  48  49  50  51  52  53  \n",
+       " 0   0.492  ...  14  25   6  26  12  21  23   6   9  21  \n",
+       " 1   0.478  ...   3  11   8  16   5  19   6  29  19   4  \n",
+       " 2   0.541  ...  21  14  15  15   1   1  29  21  13   5  \n",
+       " 3   0.511  ...  24   8  17  21  14  15  19  21  17  28  \n",
+       " 4   0.498  ...  11   7  29  16   3  27  17  27  26  13  \n",
+       " 5   0.474  ...  19  16   1   9  14   8  12  17  25  12  \n",
+       " 6   0.493  ...  29  18  20   1  16   3  25   8  23  17  \n",
+       " 7   0.525  ...  26   4   1   2  24   3   4  17  11  20  \n",
+       " 8   0.455  ...  12  24  25  18  18  25  25   3  27  25  \n",
+       " 9   0.544  ...  15   1   8  19  29   3  16  15   1   1  \n",
+       " 10  0.470  ...   9  18   4   9   6  28  21   2  19  22  \n",
+       " 11  0.512  ...   7  10  19  26  12  29  28   5   4   3  \n",
+       " 12  0.512  ...   8  21   1   3  22   3   8  15   8   2  \n",
+       " 13  0.491  ...  20  27  21   9   6  10   2  17   6  15  \n",
+       " 14  0.497  ...   2   2  21   9   4  13  11  21  15   8  \n",
+       " 15  0.443  ...  23  28  15  21  24  15  10  10  28  24  \n",
+       " 16  0.479  ...   1   8  12  25  11   8   7  26  10  11  \n",
+       " 17  0.483  ...  22   5   6   3  22  12  20   6   6  22  \n",
+       " 18  0.494  ...   4  18  12   6  24  21   8  11   5   6  \n",
+       " 19  0.479  ...   4  26   5  29  16  19  25   9  12  19  \n",
+       " 20  0.492  ...  18  22  11   8   8  13  21  21   3  10  \n",
+       " 21  0.513  ...  27  22  24  20  18  24  23  11  14  16  \n",
+       " 22  0.497  ...  25  16   8   6  18  10  12  20  17   7  \n",
+       " 23  0.494  ...  15  12  27   3  27   7   5  11  22  14  \n",
+       " 24  0.487  ...  28  29  21  26   8  17  18   4  24  27  \n",
+       " 25  0.482  ...  15   5  17  21  27  25   3  28  21  26  \n",
+       " 26  0.398  ...  13  15  27   9   8  23  15  21  29  29  \n",
+       " 27  0.535  ...   4   3  12  21   2   2  14   1   2   9  \n",
+       " 28  0.486  ...  10  12  26  14  21  18   1  14  16  17  \n",
+       " \n",
+       " [29 rows x 54 columns]]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
